added an exception that is thrown if one of the mime type provided in the textCompression option does not exist

--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
 		"@rollup/plugin-node-resolve": "6.*",
 		"@rollup/plugin-typescript": "2.*",
 		"@types/hapi__joi": "16.*",
+		"@types/mime-db": "^1.27.0",
 		"@types/node": "13.*",
 		"add": "^2.0.6",
 		"chai": "4.*",
 		"codecov": "3.*",
 		"gulp": "4.*",
 		"is-ip": "3.*",
+		"mime-db": "1.*",
 		"mocha": "7.*",
 		"mocha-sinon": "2.*",
 		"np": "5.*",
