--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"codecov": "3.*",
 		"gulp": "4.*",
 		"is-ip": "3.*",
+		"is-url-http": "1.*",
 		"mime-db": "1.*",
 		"mocha": "7.*",
 		"mocha-sinon": "2.*",
