added coverage information in the console when running the test command

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
 	],
 	"scripts": {
 		"build": "gulp build",
-		"test": "nyc --reporter=lcov mocha --require @babel/register test",
+		"test": "nyc --reporter=lcov --reporter=text mocha --require @babel/register test",
 		"coverage": "codecov",
 		"release": "np"
 	},
