added dependency check before building the library

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
 		"server"
 	],
 	"scripts": {
-		"build": "gulp build",
+		"build": "ncu && gulp build",
 		"test": "nyc --reporter=lcov --reporter=text mocha --require @babel/register test",
 		"coverage": "codecov",
 		"release": "np"
